# lidox

./: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain  succinct.json
circuits/: builder.rs  v1.rs
contracts/: foundry.toml
contracts/script/: LidoOracleV1.s.sol  Request.s.sol  SuccinctLidoOracleV1.s.sol  deploy.sh  request.sh
contracts/src/: LidoOracleV1.sol  SuccinctLidoOracleV1.sol
contracts/src/interfaces/: LidoZKOracle.sol
contracts/test/: SuccinctLidoOraclev1.t.sol
operator/: .env.example  .gitignore  package.json  tsconfig.json
operator/src/: abi.ts  config.ts  index.ts  operator.ts  util.ts
